# cmake-examples

./: Jenkinsfile  jenkins.pipeline
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/F-build-type/: main.cpp
